k8s/ntfy/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o deployment.yaml -n ntfy
    kompose.service.expose: ntfy.wayl.one,ntfy.k.waylonwalker.com
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: ntfy
  name: ntfy
  namespace: ntfy
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: ntfy
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ntfy
  namespace: ntfy
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o deployment.yaml -n ntfy
    kompose.service.expose: ntfy.wayl.one,ntfy.k.waylonwalker.com
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: ntfy
  name: ntfy
  namespace: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ntfy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o deployment.yaml -n ntfy
        kompose.service.expose: ntfy.wayl.one,ntfy.k.waylonwalker.com
        kompose.version: 1.31.2 (a92241f79)
        diun.enable: "true"
      creationTimestamp: null
      labels:
        io.kompose.network/ntfy-default: "true"
        io.kompose.service: ntfy
    spec:
      tolerations:
        - key: "performance"
          operator: "Equal"
          value: "low"
          effect: "NoSchedule"
      containers:
        - args:
            - serve
          image: binwiederhier/ntfy:v2.11.0
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -ec
                - wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eq '"healthy"[[:space:]]*:[[:space:]]*true'
            failureThreshold: 3
            initialDelaySeconds: 40
            periodSeconds: 60
            timeoutSeconds: 10
          name: ntfy
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /var/cache/ntfy
              name: ntfy-cache
            - mountPath: /etc/ntfy
              name: ntfy
      restartPolicy: Always
      volumes:
        - name: ntfy-cache
          persistentVolumeClaim:
            claimName: ntfy-cache
        - name: ntfy
          persistentVolumeClaim:
            claimName: ntfy
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: ntfy
  name: ntfy
  namespace: ntfy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: ntfy.wayl.one
      http:
        paths:
          - backend:
              service:
                name: ntfy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ntfy.wayl.one
      secretName: ntfy-cert-tls
status:
  loadBalancer: {}
